CHORE: Rename V07 to Inlay
